<resources>
    <string name="app_name">RouterRemote</string>
    <string name="action_settings">Settings</string>
    <string name="pref_username">Username</string>
    <string name="pref_password">Password</string>
    <string name="pref_category_server">Server</string>
    <string name="pref_host">Host</string>
    <string name="pref_category_debug">Debug</string>
    <string name="pref_dry_run">Dry Run</string>
    <string name="pref_category_advanced">Advanced</string>
    <string name="pref_allowed_network">Allowed network SSIDs (regex)</string>
    <string name="button_vpn_on">VPN On</string>
    <string name="button_vpn_off">VPN Off</string>
    <string name="key_username" translatable="false">username</string>
    <string name="key_password" translatable="false">password</string>
    <string name="key_host" translatable="false">host</string>
    <string name="key_dry_run" translatable="false">dry_run</string>
    <string name="key_allowed_network" translatable="false">allowed_network</string>
    <string name="message_vpn_on">VPN is on</string>
    <string name="message_vpn_off">VPN is off</string>
    <string name="toast_dry_run">Dry run</string>
    <string name="message_thinking">…</string>
    <string name="message_error">Error</string>
    <string name="message_unknown">\?</string>
    <string name="toast_please_configure">Please configure your router in Settings</string>
    <string name="toast_please_connect">Please connect to a Wi-Fi network matching %s</string>
    <string name="toast_location_required">Location permissions are required for SSID lock</string>
    <string name="toast_please_connect_wifi">Please connect to Wi-Fi</string>
</resources>
