<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_category_server">
        <EditTextPreference
            android:key="@string/key_username"
            android:title="@string/pref_username"/>
        <EditTextPreference
            android:key="@string/key_password"
            android:title="@string/pref_password"
            android:inputType="textPassword"/>
        <EditTextPreference
            android:key="@string/key_host"
            android:title="@string/pref_host"
            android:defaultValue="192.168.1.1"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_category_advanced">
        <EditTextPreference
            android:key="@string/key_allowed_network"
            android:title="@string/pref_allowed_network"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_category_debug">
        <CheckBoxPreference
            android:key="@string/key_dry_run"
            android:title="@string/pref_dry_run"/>
    </PreferenceCategory>
</PreferenceScreen>